infra-tools/pharmetrade/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmetrade-deployment
  labels:
    app: pharmetrade
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pharmetrade
  template:
    metadata:
      labels:
        app: pharmetrade
    spec:
      containers:
        - name: pharmetrade
          image: headway630/pharmetrade:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
              name: pharmetrade
