infra-tools/pharmetrade/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharmetrade-service
  labels:
    app: pharmetrade
spec:
  ports:
    - port: 80
      targetPort: 5173
  selector:
    app: pharmetrade
  type: NodePort
